<resources>
    <string name="app_name">Vive Natural</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_search">Buscar</string>
    <string name="action_edit">Editar</string>
    <string name="action_edit_product">Editar</string>
    <string name="calificar">Calificar</string>
    <string name="delete_list_items">Borrar productos reservados</string>
    <string name="action_show_less">Agrupar productos</string>
    <string name="action_show_more">Desagrupar productos</string>
    <string name="action_save">Guardar</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Login & Registro-->
    <string name="login">Iniciar Sesión</string>
    <string name="singup">Registrarse</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nombreUsuario">Nombre completo</string>
    <string name="email">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="err_msg_name">Ingrese su nombre</string>
    <string name="err_msg_email">Ingrese correo electrónico válido</string>
    <string name="err_msg_pass">Ingrese la contraseña</string>

    <string name="checkProductor">Productor</string>
    <string name="checkConsumidor">Consumidor</string>

    <string name="nav_item_perfil">Perfil</string>
    <string name="nav_item_statistics">Estadísticas</string>
    <string name="nav_item_reservas">Pedidos</string>
    <string name="nav_item_products">Productos</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_perfil</item>
        <item>@string/nav_item_statistics</item>
        <item>@string/nav_item_reservas</item>
        <item>@string/nav_item_products</item>
    </string-array>

    <!-- Drawer Productor -->
    <string name="title_products">Productos</string>
    <string name="title_reservas">Pedidos</string>
    <string name="title_statistics">Estadísticas</string>
    <string name="title_perfil">Perfil</string>

    <!-- Drawer Consumidor -->
    <string name="title_productores">Productores</string>
    <string name="title_lista_mercado">Lista de mercado</string>
    <string name="title_info">Acerca del Mercado</string>
    <string name="title_mercado">Mercado Agroecológico</string>
    <string name="title_products_market">Productos del mercado</string>

    <string name="title_cuenta">Cuenta</string>
    <string name="title_log_out">Cerrar sesión</string>

    <!-- Perfil -->
    <string name="description">Descripción</string>
    <string name="text_description">No hay información</string>

    <!-- Productores -->
    <string name="emptyProducers">No hay productores para mostrar</string>

    <!-- Productos -->
    <string name="emptyProducts">No hay productos para mostrar</string>
    <string name="emptyProductsReserve">No has reservado ningún producto</string>
    <string name="addProducts">Agregar producto</string>
    <string name="reservarProducto">Reservar producto</string>
    <string name="agregar">Agregar</string>
    <string name="reservar">Reservar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cantidad">Disponible:</string>
    <string name="reserve">RESERVADAS</string>
    <string name="cantidadOfrecida">Cantidad a ofrecer</string>
    <string name="cantidadReservar">Cantidad a reservar</string>
    <string name="info">Información</string>
    <string name="addDescription">Ingresa descripción</string>
    <string name="addCantidad">0.0</string>
    <string name="libra">lb</string>
    <string name="comentarios">COMENTARIOS •</string>
    <string name="cargandoComentario">Cargando comentario...</string>
    <string name="addComentario">Agregar un comentario.</string>

    <!-- Productores -->
    <string name="cargandoDescrip">Cargando descripción...</string>
    <string name="productos">PRODUCTOS •</string>
    <string name="noComments">No hay comentarios para mostrar</string>

    <!-- Pedidos -->
    <string name="noPedidos">No hay solicitud de pedidos</string>

    <!-- Market products-->
    <string name="producers">PRODUCTORES •</string>

    <!-- Info -->
    <string name="title_asoproorganico">Asoproorgánicos</string>
    <string name="asoproorganico">Es una Asociación de pequeños y medianos productores orgánicos, compuesta por personas naturales y asociaciones de base que practica la agricultura ecológica familiar, beneficiando  aproximadamente a 300 familias campesinas del Valle y Cauca.</string>

    <string name="title_mercado_cali">Mercado Orgánico de Cali</string>
    <string name="mercado_cali">Proyecto Productivo sustentable y sostenible apoyado por la CVC con aproximadamente 15 años y cuenta con 3 componentes básicos:</string>
    <string name="mercado_cali1">Proceso productivo basado en la agroecología, protege el medio ambiente y nuestros ecosistemas ya que no usa agroquímicos, ni pesticidas, ni fertilizantes químicos o de síntesis. Usamos fertilizantes orgánicos con base en compostajes producidos en nuestras fincas.</string>
    <string name="mercado_cali2">Nuestro soporte es la agricultura ecológica familiar, la cultura asociativa, la economía solidaria, cuyo propósito, es contribuir a elevar el nivel y calidad de vida del productor rural. A través de los Mercados Orgánicos y de la Red de Mercados Orgánicos, estamos generando tejido social y fortaleciendo la economía del campesino colombiano.</string>
    <string name="mercado_cali3">Con la producción agroecológica de alimentos inicuos, protegemos la salud de los consumidores y mejoramos su calidad de vida.</string>

    <string name="title_comercializacion">Comercialización</string>
    <string name="comercializacion">Somos productores orgánicos y comercializadores directos, eliminamos los intermediarios, que son los que encarecen los productos al consumidor. Nuestra filosofía se fundamenta en el PRECIO JUSTO, es decir, que es favorable tanto para el productor como para el consumidor. Utilizamos diferentes canales   de comercialización: directamente en el Mercado Orgánico de Cali, todos los sábados de 5 am a 12 am, ubicado en el parqueadero de la parte  de atrás de la CVC. En góndolas en los almacenes de cadena, a través de domicilios dentro de la ciudad de Cali y mediante ésta Aplicación.</string>

</resources>
