<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="60dp"
            android:theme="@style/EditTextHint"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:hint="@string/nombreUsuario" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:theme="@style/EditTextHint"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorPrimary"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:theme="@style/EditTextHint"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:inputType="textPassword"
                android:hint="@string/contrasena" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/crearCuenta"
        android:background="#40FFFFFF"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/registrarFormulario"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:checkedButton="1"
        android:layout_below="@+id/linearLayout"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkConsumidor"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:id="@+id/checkConsumidor"
            android:onClick="selectItem"
            android:layout_marginTop="50dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkProductor"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:id="@+id/checkProductor"
            android:onClick="selectItem"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="110dp"
            android:layout_marginStart="110dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/rol"
        android:layout_above="@+id/registrarFormulario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

</RelativeLayout>