<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/textColorPrimary">

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/textViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/addProducts"
            android:textColor="@color/textColorPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/productsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_productos"
        android:layout_below="@+id/contenedor"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:tint="#B6B6B6" />

    <Spinner
        android:id="@+id/spinnerProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_alignTop="@+id/productsIcon"
        android:layout_toRightOf="@+id/productsIcon"
        android:layout_marginTop="-10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_toEndOf="@+id/productsIcon"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="30dp" />

    <ImageView
        android:id="@+id/productsCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_libra"
        android:layout_below="@+id/productsIcon"
        android:layout_alignLeft="@+id/productsIcon"
        android:layout_alignStart="@+id/productsIcon"
        android:layout_marginTop="20dp"
        android:tint="#B6B6B6" />

    <EditText
        android:id="@+id/editTextCant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_alignTop="@+id/productsCant"
        android:layout_alignLeft="@+id/spinnerProducts"
        android:layout_alignStart="@+id/spinnerProducts"
        android:hint="@string/cantidadOfrecida"/>

    <TextView
        android:id="@+id/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/editTextCant"
        android:layout_marginBottom="10dp"
        android:text="@string/libra"
        android:textSize="18sp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#808080" />

    <ImageView
        android:id="@+id/productsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:layout_below="@+id/productsCant"
        android:layout_alignLeft="@+id/productsCant"
        android:layout_alignStart="@+id/productsCant"
        android:layout_marginTop="20dp"
        android:tint="#B6B6B6" />

    <EditText
        android:id="@+id/editTextInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignTop="@+id/productsInfo"
        android:layout_alignLeft="@+id/spinnerProducts"
        android:layout_alignStart="@+id/spinnerProducts"
        android:maxLength="140"
        android:hint="@string/info"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textColor="@color/colorGris"
        android:background="@null"
        android:layout_below="@+id/editTextInfo"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@+id/done"
        android:layout_toStartOf="@+id/done" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:textColor="@color/colorPrimary"
        android:background="@null"
        android:layout_alignTop="@+id/cancel"
        android:layout_alignRight="@+id/editTextInfo"
        android:layout_alignEnd="@+id/editTextInfo" />

</RelativeLayout>