<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/containerInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="220dp"
            android:theme="@style/EditTextHint"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorPrimary"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:theme="@style/EditTextHint"
            app:errorTextAppearance="@style/ErrorAppearance">

            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:inputType="textPassword"
                android:hint="@string/contrasena" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:background="#40FFFFFF"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/iniciar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/containerInput"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/singup"
        android:background="#40FFFFFF"
        android:textColor="@color/textColorPrimary"
        android:id="@+id/registrarse"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>